# easycaptain-collision-demo

./: .gitignore  CMakeLists.txt  README.md  cpa_risk.py
data/: targets.csv  targets_timeseries.csv
src/: cpa.cpp  cpa.h  io.cpp  io.h  json_writer.cpp  json_writer.h  kalman.cpp  kalman.h  main.cpp  main_simple.cpp  radar.cpp  radar.h
